Change to prevent image overlap on small screen

--- a/frontend/src/components/Sidebar/styles.css
+++ b/frontend/src/components/Sidebar/styles.css
@@ -4,6 +4,7 @@
   background: var(--light-blue);
   box-shadow: 1px 0px 8px 0px rgba(0, 0, 0, 0.75);
   z-index: 100;
+  min-width: 200px;
 }
 
 .sidebar-container header {
